# python-omnikinverter

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  test_output.py
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yaml  labels.yaml  linting.yaml  lock.yaml  release.yaml  requirements.txt  stale.yaml  tests.yaml  tweet-release.yaml  typing.yaml
examples/: test_default.py  test_output.py  test_output_tcp.py  test_tcp.py
omnikinverter/: __init__.py  exceptions.py  models.py  omnikinverter.py  tcp.py
omnikinverter/requests/: http.py  tcp.py
src/omnikinverter/: __init__.py  const.py  models.py  omnikinverter.py  tcp.py
tests/: __init__.py  test_input.py  test_models.py  test_omnik.py  test_tcp_models.py
tests/__snapshots__/: test_models.ambr
tests/fixtures/: inverter.cgi  moniter.cgi  status.html  status.js  status.json  status_devicearray.js  status_devicearray_sofar220tl.js  status_solis.html  status_webdata.js  status_wrong.js  tcp_reply.data  tcp_reply_no_firmware.data  tcp_reply_offline.data  wrong_status.html  wrong_status.json
